--- a/Pages/DateTimeExtensionSample.cshtml
+++ b/Pages/DateTimeExtensionSample.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DotnetCity.CSharpExtensionMethods.Pages.IndexModel
+@model DotnetCity.CSharpExtensionMethods.Pages.DateTimeExtensionSampleModel
 @{
     Layout = null;
 }
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>DateTimeExtensionSample</title>
 </head>
 <body>
 </body>
